# fastapi-microservice

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  backstage-config.yaml  codecov.yaml  docker-compose.local.yml  docker-compose.yml
manifests/: configmap.yaml  hpa.yaml  (+1 more)
src/app/: main.py  pyproject.toml  run.sh
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: authentication.py  beer.py
src/app/app/: main.py
src/app/app/api/api_v1/: api.py
src/app/app/core/: config.py
src/app/app/crud/: __init__.py  base.py  crud_beer.py
src/app/app/db/: base.py
src/app/app/models/: __init__.py  beer.py
src/app/app/schemas/: beer.py
src/app/app/tests/utils/: beer.py
src/app/crosscutting/exceptions/http/: exc_400.py  exc_401.py  exc_403.py  exc_404.py
src/app/domain/models/: account.py  beer.py
src/app/domain/repository/: account.py  base.py  beer.py  dependency.py
src/app/domain/repository/crud/: __init__.py  account.py  beer.py
src/app/domain/repository/migrations/: env.py
src/app/domain/schemas/: __init__.py  account.py  base.py  beer.py
src/app/infra/database/: async_engine_postgresql.py  async_session.py  database.py  events.py  events_listens.py  session.py  table.py
src/app/infra/migrations/: env.py
src/app/infra/migrations/versions/: 2022_12_30_1036-a3ded1dd7688_first_commit.py
src/app/infra/security/authorizations/: jwt.py
src/app/infra/security/hashing/: hash.py  password.py
src/app/infra/settings/: base.py  development.py  events.py  manager.py  production.py  staging.py
(+21 files in other folders)
